<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dp_app_background"
            android:fillViewport="true"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="RtlCompat">

                <include
                    android:id="@+id/back"
                    layout="@layout/dp_layout_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:gravity="center"
                    android:text="@string/welcome_to_app"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp" />

                <LinearLayout
                    android:id="@+id/linear_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/have_account"
                        android:textColor="@color/grey_40"
                        android:textSize="@dimen/_8sdp" />

                    <TextView
                        android:id="@+id/txt_signin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="@string/signin"
                        android:textColor="@color/red_500" />

                </LinearLayout>

                <TextView
                    style="@style/DPEditTextLabel"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/first_name" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textView"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:hint="@string/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/DPEditTextLabel"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/email" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:hint="@string/email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_mail"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/DPEditTextLabel"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/phone_number_tv" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="6"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:orientation="horizontal">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/country_code_picker"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/dp_bg_edittext"
                        android:clickable="false"
                        android:gravity="center"
                        app:ccp_contentColor="@color/dp_textColorPrimary"
                        app:ccp_defaultPhoneCode="20"
                        app:ccp_showFlag="true"
                        app:ccp_showNameCode="true"
                        app:ccp_showPhoneCode="true"
                        app:ccp_textSize="@dimen/_12sdp" />


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                      android:gravity="center"
                        android:hint="@string/phone_number_tv"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_phone"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:inputType="phone" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <TextView
                    style="@style/DPEditTextLabel"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/password" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:hint="@string/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

    <Button
                    android:id="@+id/btn_signup"
                    style="@style/DPButtonStyle"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false" />


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</layout>