<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.login.LoginActivity">

    <data>
        <variable
            name="vm"
            type="com.example.developnetworktask.ui.activity.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr"
        android:textDirection="ltr">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="ltRCompat">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">


                    <!-- <ImageView
                         android:layout_width="@dimen/_200sdp"
                         android:layout_height="@dimen/_100sdp"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="@dimen/_8sdp"
                         android:scaleType="centerCrop"
                         android:src="@drawable/ic_shopping" />
 -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:gravity="center"
                        android:text="@string/signin"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sdp" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textView"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/phone_number_tv"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_phone"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:drawableEnd="@drawable/ic_phone"
                            android:inputType="phone" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/password"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_Login_password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:drawableEnd="@drawable/ic_lock"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_login"
                        style="@style/DPButtonStyle"
                        android:text="@string/signin"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_forgetPassword" />

                    <TextView
                        android:id="@+id/btn_forget_pass"
                        style="@style/dashLine"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:text="@string/forget_password" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/_10sdp"

                        android:paddingEnd="@dimen/_10sdp"
                        android:weightSum="3">

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_gravity="center"
                            android:layout_weight=".5"
                            android:background="@color/grey_500" />

                        <TextView
                            style="@style/DPEditTextLabel"
                            android:layout_gravity="center"
                            android:text="@string/or_connect_with"
                            android:textColor="@color/grey_500" />

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_weight=".5"
                            android:background="@color/grey_500"
                            android:padding="@dimen/_10sdp" />
                    </LinearLayout>


                    <Button
                        android:id="@+id/btn_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:backgroundTint="@color/dp_fb_blue"
                        android:clickable="true"
                        android:drawableStart="@drawable/facebook"
                        android:drawablePadding="0dp"

                        android:drawableTint="@color/white"
                        android:paddingEnd="40dp"
                        android:text="@string/facebook"
                        android:textSize="@dimen/_8sdp" />

                    <Button
                        android:id="@+id/btn_google"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:backgroundTint="@color/red_500"
                        android:clickable="true"
                        android:drawableStart="@drawable/google"
                        android:drawablePadding="0dp"
                        android:drawableTint="@color/white"
                        android:paddingEnd="40dp"
                        android:text="@string/google"
                        android:textSize="@dimen/_8sdp" />

                    <LinearLayout
                        android:id="@+id/lyt_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_30sdp"
                        android:gravity="center"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dont_have_account"
                            android:textColor="@color/grey_40"
                            android:textSize="@dimen/_8sdp" />

                        <TextView
                            android:id="@+id/txt_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:text="@string/sign_up"
                            android:textColor="@color/red_500" />


                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>
    </RelativeLayout>
</layout>